Added Entity Component System Pattern to MasterEngine - Adding BoxBounds, Transform, Component, GameObject and Vector2 ; Modified gitignore, gradlebuild, Main, KeyListener, LevelEditorScene, MouseListener, Scene and Window

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ bin/
 # Ignore Idea customizations
 .idea
 
+# Ignore Vscode customizations
+.vscode
+
 # Ignore Eclipse settings
 .project
 .settings/
